--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@vueuse/core": "^7.7.1",
-    "vue": "^3.2.25"
+    "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.3",
+    "@antfu/eslint-config": "^0.18.8",
+    "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
-    "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-vue": "^2.2.4",
     "eslint": "^8.10.0",
-    "naive-ui": "^2.26.3",
-    "typescript": "^4.5.4",
+    "naive-ui": "^2.26.4",
+    "typescript": "^4.6.2",
     "vfonts": "^0.0.3",
-    "vite": "^2.8.0",
+    "vite": "^2.8.6",
     "vue-tsc": "^0.29.8"
   }
 }
