--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --mode development",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "lint": "eslint \"**/*.{vue,ts,js}\""
   },
   "dependencies": {
