--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         run: echo VITE_API_HOSTNAME=${{ secrets.AWSL_API_HOST }} > .env.production
 
       - name: Install and Build
-        run: yarn && yarn build
+        run: npm i -g pnpm && pnpm i && pnpm build
 
       - name: Build the Docker image
         run: docker build . --file docker/Dockerfile --tag dreamhunter2333.azurecr.io/awsl/awsl-front:${{ steps.get_version.outputs.VERSION }}
