fix: nginx try_files

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,7 @@
 FROM nginx
-COPY ./dist /usr/share/nginx/html/
+
+RUN mkdir /app
+COPY ./dist /app/dist
+COPY ./docker/conf.d /etc/nginx/conf.d
+
+EXPOSE 80 443
