--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.41.0",
+    "@types/node": "^20.6.0",
     "@types/web-bluetooth": "^0.0.17",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
