--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite --mode development",
     "build": "vue-tsc --noEmit && vite build",
-    "lint": "eslint \"**/*.{vue,ts,js}\""
+    "lint": "eslint \"**/*.{vue,ts,js}\"",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
@@ -21,10 +22,38 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.3.4",
     "eslint": "^8.49.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "naive-ui": "^2.34.4",
+    "prettier": "3.0.3",
     "typescript": "^5.2.2",
     "vfonts": "^0.0.3",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.10"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.ts": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.tsx": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.vue": [
+      "prettier --parser=vue --write",
+      "eslint --fix"
+    ],
+    "*.css": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write --parser markdown --prose-wrap never",
+      "eslint --fix"
+    ]
   }
 }
