--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "awsl-naive",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite --mode development",
     "build": "vue-tsc --noEmit && vite build",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
+    "lint:fix": "eslint . --fix",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@vueuse/core": "^10.4.1",
-    "lyla": "^1.2.2",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@vueuse/core": "^10.9.0",
+    "lyla": "^1.11.0",
+    "vue": "^3.4.26",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.41.0",
-    "@types/node": "^20.6.0",
-    "@types/web-bluetooth": "^0.0.17",
+    "@antfu/eslint-config": "^2.16.1",
+    "@types/node": "^20.12.8",
+    "@types/web-bluetooth": "^0.0.20",
     "@vicons/antd": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "eslint": "^8.49.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "naive-ui": "^2.34.4",
-    "prettier": "3.0.3",
-    "typescript": "^5.2.2",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "eslint": "^9.1.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "naive-ui": "^2.38.1",
+    "prettier": "3.2.5",
+    "typescript": "^5.4.5",
     "vfonts": "^0.0.3",
-    "vite": "^4.4.9",
-    "vue-tsc": "^1.8.10"
+    "vite": "^5.2.11",
+    "vue-tsc": "^2.0.16"
   },
   "lint-staged": {
     "*.js": [
