--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "awsl-naive",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite --mode development",
     "build": "vue-tsc --noEmit && vite build",
@@ -10,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@lylajs/web": "^1.12.0",
     "@vueuse/core": "^10.9.0",
     "lyla": "^1.11.0",
     "vue": "^3.4.26",
