--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@lylajs/web": "^1.12.0",
     "@vueuse/core": "^10.9.0",
+    "lodash-es": "^4.17.21",
     "vue": "^3.4.26",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.16.1",
     "@iconify-json/mdi": "^1.1.66",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.12.8",
     "@types/web-bluetooth": "^0.0.20",
     "@unocss/preset-uno": "^0.59.4",
